[package]
name = "fsp-vesting"
version = "0.1.0"
authors = ["Andrew Fraser <a@serfrae.com>"]
description = "Full-featured vesting program for Solana"
edition = "2021"

[features]
test-sbf = []
no-entrypoint = []

[dependencies]
arrayref = "0.3.8"
borsh = "1.5.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
num_enum = "0.7.3"
solana-program = "2.0.3"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
spl-token-2022 = "4.0.1"
thiserror = "1.0.63"

[lib]
name = "fsp_vesting"
crate-type = ["cdylib", "lib"]
